force-app/main/default/objects/Dan360_Account_Team_Management__c/Dan360_Account_Team_Management__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para poder dar de alta usuarios en Account Team Members y que pase por un proceso de aprobacion.</description>
    <label>Account Team Management</label>
    <nameField>
        <label>Dan360 Account Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Team Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>