force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Profesional el cual se pidio visitar por el APM</description>
    <label>Profesional</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Management</relationshipLabel>
    <relationshipName>Account_Team_Management</relationshipName>
    <type>Lookup</type>
</CustomField>