force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/AccountAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountAccessLevel__c</fullName>
    <description>Campo custom para duplicarlo en AccountTeamMembers.AccountAccessLevel</description>
    <label>AccountAccessLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read/Write</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>