force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/CaseAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>CaseAccessLevel__c</fullName>
    <label>CaseAccessLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read/Write</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>