force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/Dan360_Areas_Terapeuticas__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Areas_Terapeuticas__c</fullName>
    <label>Areas Terapeuticas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Areas_Terapeuticas</valueSetName>
    </valueSet>
</CustomField>