force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
                <isActive>false</isActive>
                <label>Aprovado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>