force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institucion</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Management (Institucion)</relationshipLabel>
    <relationshipName>Account_Team_Management1</relationshipName>
    <type>Lookup</type>
</CustomField>