force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/TeamMemberRole__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberRole__c</fullName>
    <label>TeamMemberRole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Lead Qualifier</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>