force-app/main/default/objects/Dan360_Account_Team_Management__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>APM que pidio el alta para poder visitar al profesional.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Management</relationshipName>
    <type>Lookup</type>
</CustomField>